--- a/main.css
+++ b/main.css
@@ -100,6 +100,7 @@ h1
 {
 	/*width: calc(20%/3 - 10px);*/
 	width: calc(10% - 5px);
+	object-fit: cover;
 }
 
 .highlight:hover
@@ -140,6 +141,7 @@ h1
 	.small
 	{
 		width: calc(10% - 10px);
+		object-fit: cover;
 	}
 }
 
