--- a/main.css
+++ b/main.css
@@ -17,9 +17,10 @@ body
 
 main
 {
-	width: 85vw;
+	color: #ddd;
+	width: 90vw;
 	margin: 3vw auto 150px auto;
-	padding: 3.5vw 0;
+	padding: 1vw 0 3vw 0;
 	background: #444;
 }
 
@@ -33,18 +34,18 @@ section
 	/*background: darkorange;*/
 }
 
-h1
+header h1
 {
 	text-align: center;
 	font-size: 3rem;
-	margin: 0;
+	margin: 30px auto;
 	/*background: darkcyan;*/
 
 }
 
 #flex
 {
-	width: 80vw;
+	width: 85vw;
 	margin: 0 auto;
 
 	display: flex;
@@ -113,6 +114,7 @@ h1
 	font-style: italic;
 	font-size: 1rem;
 	text-align: center;
+	margin-bottom: 30px;
 }
 
 
